--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -4,6 +4,10 @@
     <%= f.text_field :name %>
   </p>
 
+  <p>
+    <%= f.label :mobile_number %><br>
+    <%= f.text_field :mobile_number %>
+  </p>
 
   <p>
     <%= f.submit %>
