--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,5 +1,5 @@
 <% @customers.each do |customer| %>
   <p>
-    <%= customer.name %>
+  <%= customer.name %> , <%= customer.mobile_number %>
   </p>
 <% end %>
