--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -9,7 +9,7 @@
 <% @customers.each do |customer| %>
   <li>
     <p>
-      <%= link_to customer.name, controller: "customers", action: "show", id: customer._id%>
+    <%= link_to customer.name, controller: "customers", action: "show", id: customer._id%>, <%= customer.mobile_number %>
     </p>
   </li>
 <% end %>
