--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,2 +1,25 @@
-<p>name: <%= @customer.name %></p>
-<p>mobile: <%= @customer.mobile_number %></p>
+    <p> first_name:    <%= @customer.first_name %>, </p>
+    <p> last_name:     <%= @customer.last_name %>, </p>
+    <p> email:         <%= @customer.email %>, </p>
+    <p> mobile_number:   <%= @customer.mobile_number %>, </p>
+    <p> uuid:         <%= @customer.uuid %>, </p>
+    <p> address:     <%= @customer.address %>, </p>
+    <p> postcode:  <%= @customer.postcode %>, </p>
+    <p> age_group:  <%= @customer.age_group %>, </p>
+    <p> gender:   <%= @customer.gender %>, </p>
+    <p> incoming_group:   <%= @customer.incoming_group %>, </p>
+    <p> houseowner: <%= @customer.houseowner %>, </p>
+    <p> profession:  <%= @customer.profession %>, </p>
+    <p> colleage_degree: <%= @customer.colleage_degree %>, </p>
+    <p> marrage_status:  <%= @customer.marrage_status %>, </p>
+    <p> has_children:<%= @customer.has_children %>, </p>
+    <p> deal_seek:  <%= @customer.deal_seek %>, </p>
+    <p> apple_fan:  <%= @customer.apple_fan %>, </p>
+    <p> oversea_buyer:   <%= @customer.oversea_buyer %>, </p>
+    <p> preferred_brand: <%= @customer.preferred_brand %>, </p>
+    <p> payment_type: <%= @customer.payment_type %>, </p>
+    <p> faviourate_category: <%= @customer.faviourate_category %>, </p>
+    <p> frequence_to_buy:  <%= @customer.frequence_to_buy %>, </p>
+    <p> average_spend:  <%= @customer.average_spend %>, </p>
+    <p> wechat_id:    <%= @customer.wechat_id %>, </p>
+
